--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <p>I grew up in the Chicago area and have been living in Seattle since 2005. I have a Master's Degree in Ecology and Horticulture, and have worked for the past eight years in various parts of the environmental sector. Most recently, I managed residential landscaping projects for a local company specializing in permaculture, edible landscapes, and rain garden & cistern installation. I also write and perform music, specializing in guitar and electronic composition. Some of my work can be found <a href="https://soundcloud.com/cryptomeria">here</a>.
 
-  <script src="javascript_v2.js" type="text/javascript"></script>
+  <script src="game_v2.js" type="text/javascript"></script>
 
 </body>
 
