--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
 <body>
   <h1>Welcome to the guessing game!</h1>
 
-  <h2>How the game works</h2>
+  <p>You're never gonna find a sweeter game than this. It'll teach you all about Dan, and who doesn't want to know that?</p>
 
-  <p>This is a wonderful little game that will ask you three questions about me. The game will prompt you to enter your name, then ask for yes/no answers to the three questions. After you answer the questions, the game will report how many questions you answered correctly and tell you the correct answer to any that you got wrong.
+  <h3>Question 1: Is my middle name Paul?<h3>
 
-  <h3>Technical details</h3>
+  <h3>Question 2: Do I play the guitar?<h3>
 
-  <p>The script prompts the user to enter their name and stores the response as a variable. It displays a welcome message created by concatening the name variable to a standard welcome, then proceeds with the questions. When the user answers correctly, the script will increment the correctAnswers variable by 1. When the user answers incorrectly, the script pushes a correction message to the incorrectAnswers array. When the user has responded to all three questions, the script creates a clarification message using correct English grammar (based on the number of incorrect questions, as determined by checking the length of the incorrectAnswers array). It then displays the score (correctAnswers) and the clarifying message (clarification).</p>
+  <h3>Question 3: Am I left-handed?<h3>
 
-  <h2>About Me</h2>
+  <h3>Question 4: How old am I?</h3>
 
-  <p>I grew up in the Chicago area and have been living in Seattle since 2005. I have a Master's Degree in Ecology and Horticulture, and have worked for the past eight years in various parts of the environmental sector. Most recently, I managed residential landscaping projects for a local company specializing in permaculture, edible landscapes, and rain garden & cistern installation. I also write and perform music, specializing in guitar and electronic composition. Some of my work can be found <a href="https://soundcloud.com/cryptomeria">here</a>.
+  <h3>Question 5: Do I love biking?</h3>
+
+  <h3>Question 6: How many eyeballs do I have?</h3>
 
   <script src="game_v2.js" type="text/javascript"></script>
 
