--- a/index.html
+++ b/index.html
@@ -12,15 +12,27 @@
 
   <h3>Question 1: Is my middle name Paul?<h3>
 
+  <p id='answer 1'></p>
+
   <h3>Question 2: Do I play the guitar?<h3>
+
+  <p id='answer 2'></p>
 
   <h3>Question 3: Am I left-handed?<h3>
 
+  <p id='answer 3'></p>
+
   <h3>Question 4: How old am I?</h3>
+
+  <p id='answer 4'></p>
 
   <h3>Question 5: Do I love biking?</h3>
 
+  <p id='answer 5'></p>
+
   <h3>Question 6: How many eyeballs do I have?</h3>
+
+  <p id='answer 6'></p>
 
   <script src="game_v2.js" type="text/javascript"></script>
 
