--- a/index.html
+++ b/index.html
@@ -10,29 +10,33 @@
 
   <p>You're never gonna find a sweeter game than this. It'll teach you all about Dan, and who doesn't want to know that?</p>
 
-  <h3>Question 1: Is my middle name Paul?<h3>
+  <h3>Question 1: Is my middle name Paul?</h3>
 
-  <p id='answer 1'></p>
+  <p id='answer1'></p>
 
-  <h3>Question 2: Do I play the guitar?<h3>
+  <h3>Question 2: Do I play the guitar?</h3>
 
-  <p id='answer 2'></p>
+  <p id='answer2'></p>
 
-  <h3>Question 3: Am I left-handed?<h3>
+  <h3>Question 3: Am I left-handed?</h3>
 
-  <p id='answer 3'></p>
+  <p id='answer3'></p>
 
   <h3>Question 4: How old am I?</h3>
 
-  <p id='answer 4'></p>
+  <p id='answer4'></p>
 
   <h3>Question 5: Do I love biking?</h3>
 
-  <p id='answer 5'></p>
+  <p id='answer5'></p>
 
   <h3>Question 6: How many eyeballs do I have?</h3>
 
-  <p id='answer 6'></p>
+  <p id='answer6'></p>
+
+  <h3>Results!</h3>
+
+  <p id= 'results'></p>
 
   <script src="game_v2.js" type="text/javascript"></script>
 
