--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <p id= 'results'></p>
 
-  <script src="game_v2.js" type="text/javascript"></script>
+  <script src="game.js" type="text/javascript"></script>
 
 </body>
 
