images added and function

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Guessing Game</title>
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 <body>
@@ -10,29 +11,35 @@
 
   <p>You're never gonna find a sweeter game than this. It'll teach you all about Dan, and who doesn't want to know that?</p>
 
-  <h3>Question 1: Is my middle name Paul?</h3>
+  <h3 id="question1"></h3>
 
   <p id='answer1'></p>
+  <img id="img1" src="images/stPaul.jpg">
 
-  <h3>Question 2: Do I play the guitar?</h3>
+  <h3 id="question2"></h3>
 
   <p id='answer2'></p>
+  <img id="img2" src="images/guitar.jpg">
 
-  <h3>Question 3: Am I left-handed?</h3>
+  <h3 id="question3"></h3>
 
   <p id='answer3'></p>
+  <img id="img3" src="images/left_handed.jpg">
 
-  <h3>Question 4: How old am I?</h3>
+  <h3 id="question4"></h3>
 
   <p id='answer4'></p>
+  <img id="img4" src="images/34.jpg">
 
-  <h3>Question 5: Do I love biking?</h3>
+  <h3 id="question5"></h3>
 
   <p id='answer5'></p>
+  <img id="img5" src="images/bicycle.jpg">
 
-  <h3>Question 6: How many eyeballs do I have?</h3>
+  <h3 id="question6"></h3>
 
   <p id='answer6'></p>
+  <img id="img6" src="images/eyeballs.jpg">
 
   <h3>Results!</h3>
 
