Add correct answer colors and links to partner games.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 
   <p id= 'results'></p>
 
+  <ul>
+    <li><a href='https://github.com/jaredscarr/guessing-game'>Jared's game</a></li>
+    <li><a href='https://github.com/nienowt/guessing_game'>Thom's game</a></li>
+  </ul>
+
   <script src="game.js" type="text/javascript"></script>
 
 </body>
